fix a menu overlap bug I accidently created

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -39,7 +39,7 @@
 	-fx-indent: 20;
 }
 
-.label {
+.tree-cell .label {
 	-fx-font-size: 14;
 }
 .lookupSearchResultsStyle-A {
